stylizing css added; nothing spacial

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
 
   <section id="photos">
     <ul>
-      <li><div class="photo"></div></li>
-      <li><div class="options"><p><span>Edit</span> | <span>Delete></p></div></li>
-      <li><div class="photo"></div></li>
-      <li><div class="options"><p><span>Edit</span> | <span>Delete></p></div></li>
-      <li><div class="photo"></div></li>
-      <li><div class="options"><p><span>Edit</span> | <span>Delete></p></div></li>
-      <li><div class="photo"></div></li>
-      <li><div class="options"><p><span>Edit</span> | <span>Delete></p></div></li>
-      <li><div class="photo"></div></li>
-      <li><div class="options"><p><span>Edit</span> | <span>Delete></p></div></li>
-      <li><div class="photo"></div></li>
-      <li><div class="options"><p><span>Edit</span> | <span>Delete></p></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/200/200"/></div></li>
+      <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/200/200"/></div></li>
+      <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/200/200"/></div></li>
+      <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/200/200"/></div></li>
+      <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/200/200"/></div></li>
+      <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/200/200"/></div></li>
+      <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
     </ul>
   </section>
 
