img links updated to different images

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
   <section id="photos">
     <ul>
-      <li><div class="photo"><img src="https://unsplash.it/300/400"/></div></li>
-      <li><div class="photo"><img src="https://unsplash.it/300/400"/></div></li>
-      <li><div class="photo"><img src="https://unsplash.it/300/400"/></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/300/400?image=12"/></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/300/400?image=13"/></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/300/400?image=14"/></div></li>
       <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
       <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
       <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
-      <li><div class="photo"><img src="https://unsplash.it/300/400"/></div></li>
-      <li><div class="photo"><img src="https://unsplash.it/300/400"/></div></li>
-      <li><div class="photo"><img src="https://unsplash.it/300/400"/></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/300/400?image=15"/></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/300/400?image=16"/></div></li>
+      <li><div class="photo"><img src="https://unsplash.it/300/400?image=17"/></div></li>
       <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
       <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
       <li><div class="options"><p><span>Edit</span> | <span>Delete</span></p></div></li>
